# examples

lite/examples/speech_commands/android/: README.md  split_wav_1s.py
lite/examples/speech_commands/android/app/: build_back
lite/examples/speech_commands/android/app/src/main/: AndroidManifest.xml
lite/examples/speech_commands/android/app/src/main/assets/: iot_light_labels.txt  q_model.tflite
lite/examples/speech_commands/android/app/src/main/cpp/mfcc/: CMakeLists.txt  array_input.h  hello-jni.c  input.txt  mfcc.cc  mfcc.h  mfcc_c_interface.cc  mfcc_c_interface.h  mfcc_dct.cc  mfcc_dct.h  mfcc_mel_filterbank.cc  mfcc_mel_filterbank.h  spectrogram.cc  spectrogram.h
lite/examples/speech_commands/android/app/src/main/cpp/micro_audio_frontend/: .CMakeLists.txt.swp  BUILD  CMakeLists.txt  HowToGetSameResultUsingCMake  back_wav_input  bazel_native_micro_test  cut100.h  fft.cc  fft_test.cc  fft_util.cc  filterbank_test.cc  filterbank_util.c  frontend_main.c  frontend_memmap_generator.c  frontend_memmap_main.c  frontend_test.cc  hello-jni.c  log_scale_test.cc  micro_audio_c_interface.cc  micro_audio_c_interface.h  noise_reduction_test.cc  pcan_gain_control_test.cc  pcan_gain_control_util.c  test_micro_interface.c  window_test.cc  window_util.c
lite/examples/speech_commands/android/app/src/main/cpp/micro_audio_frontend/kissfft/: BUILD.bazel  WORKSPACE
lite/examples/speech_commands/android/app/src/main/java/org/tensorflow/lite/examples/speech/: AiTranslatePCMDataDebug.java  Logger.java  RecognizeCommands.java  SpeechActivity.java  WaveFileUtils.java
lite/examples/speech_commands/android/app/src/main/res/layout/: tfe_sc_activity_speech.xml
